--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -75,7 +75,8 @@ body {
 	padding-right: 15px;
 	padding-left: 15px;
 	@include center-block();
-	background-color: $white;
+	//background-color: $white;
+	background-color: #DDE7D7;
 	color: $color_shark;
 	z-index: 1;
 	border-radius: 3px;
