Novo Layout Home e Consultorio

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,25 +28,24 @@ layout: compress
                         
                         	<p style="font-size:1rem;font-weight:300">{{ site.boas_vindas }}</p>
                             <p style="font-size:1rem;font-weight:300;font-style: italic">{{ site.citacao }}</p>
-                            <p style="font-size:1rem;font-weight:300">{{ site.forma_atendimento }}</p>
-                            <p style="font-size:1rem;font-weight:300">{{ site.agendamento }}</p>
+                            <p style="font-size:1rem;font-weight:300;font-style: italic">{{ site.forma_atendimento }}</p>
                             <p style="font-size:1rem;font-weight:300">{{ site.redes_sociais }}</p>
 			            
                     </h3>
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn zoombtn" href="{{ site.url }}/about">
-                            Conheça Karynne
+                         <a class="btn btn-home zoombtn" href="{{ site.url }}/sobre">
+                            Conheça a Karynne
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/contact">
+                         <a class="btn btn-home zoombtn" href="{{ site.url }}/consultorio">
                             Consultório
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/posts">
+                         <a class="btn btn-home zoombtn" href="{{ site.url }}/posts">
                             Blog
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
-                            Empresas
+                         <a class="btn btn-home zoombtn" href="{{ site.url }}/empresas">
+                            Para Empresas
                          </a>
                           
                  </h3>
