--- a/_sass/elements.scss
+++ b/_sass/elements.scss
@@ -15,13 +15,17 @@
 .social-btn {
 	padding: 10px;
 	margin: 10px;
-	@extend %btnextend;
+  @extend %btnextend;
+  background-color: #DDE7D7;
+}
+.btn-home {
+  background-color: #DDE7D7;
 }
 .btn {
 	padding: 10px 18px;
 	@include font-rem(14);
 	margin: 4px auto;
-	@extend %btnextend;
+  @extend %btnextend;
 	&.btn-success {
       background-color: $success;
       color: $white;
@@ -75,6 +79,7 @@
     margin: 5px;
     @include font-rem(16);
     font-weight:300;
+    
 }
 .post-list {
     .btn {
