Botoes brancos na pagina inicial

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,16 +35,16 @@ layout: compress
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
-                         <a class="btn btn-home zoombtn" href="{{ site.url }}/sobre">
+                         <a class="btn zoombtn" href="{{ site.url }}/sobre">
                             Conheça a Karynne
                          </a>
-                         <a class="btn btn-home zoombtn" href="{{ site.url }}/consultorio">
+                         <a class="btn zoombtn" href="{{ site.url }}/consultorio">
                             Consultório
                          </a>
-                         <a class="btn btn-home zoombtn" href="{{ site.url }}/posts">
+                         <a class="btn zoombtn" href="{{ site.url }}/posts">
                             Blog
                          </a>
-                         <a class="btn btn-home zoombtn" href="{{ site.url }}/empresas">
+                         <a class="btn zoombtn" href="{{ site.url }}/empresas">
                             Para Empresas
                          </a>
                           
